Upgrade to upstream version 6.7.1