@@ -13,8 +13,6 @@ import jakarta.faces.context.FacesContext;
 import jakarta.faces.convert.Converter;
 import jakarta.faces.convert.FacesConverter;
 
-import java.util.logging.Logger;
-
 /**
  *
  * @author skraffmiller
@@ -27,13 +25,7 @@ public class DataverseConverter implements Converter {
 
     @Override
     public Object getAsObject(FacesContext facesContext, UIComponent component, String submittedValue) {
-        if (submittedValue == null || !submittedValue.matches("[0-9]+")) {
-            logger.fine("Submitted value is not a host dataverse number but: " + submittedValue);
-            return CDI.current().select(DatasetPage.class).get().getSelectedHostDataverse();
-        }
-        else {
-            return dataverseService.find(Long.valueOf(submittedValue));
-        }
+        return dataverseService.find(new Long(submittedValue));
         //return dataverseService.findByAlias(submittedValue);
     }
 
